add attendance page

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Hinawi ERP 2020</title>
-  <base href="/">
+  <!--<base href="/">-->
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="favicon.png">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpVhQiwAllg1RAFaxMWSpQruuGARy0Y1k&libraries=places"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhw0hi2jV7md08AKM4_PJZxUOdJZNW2hY"
+          type="text/javascript"></script>
 </head>
 <body>
   <ngx-app>Loading...</ngx-app>
